# KIT-Controller

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: firmware_workflow.yml  hardware_workflow.yml  robot_builder.yml  ros_workflow.yml
CAD/lewis_crawler/: lewis-crawler.FCStd
CAD/resources/: Kitsune Scientific.kra
Docs/: conf.py  index.rst
Docs/electronics/: electronics.rst
Docs/introduction/: introduction.rst
Firmware/: CMakeLists.txt  Makefile  README.md  build_flags.py  foxtool.py  pico_sdk_import.cmake  platformio.ini
Firmware/bootloader/: README.md
Firmware/include/: boardPins.h
Firmware/src/: CMakeLists.txt  FreeRTOSConfig.h  console.cpp  console.h  local_queues.h  main.c  main.cpp  parser.cpp  parser.h  pindefs.h  usb_console.cpp  usb_console.h
Hardware/: .gitignore  BackPlane.yaml  Dev_Card.yaml  KIT_Controller.yaml  LC-MainboardMaskJig.FCStd  config.kibot.yaml
Hardware/BackPlane/: BackPlane.kicad_pcb  BackPlane.kicad_pro  BackPlane.kicad_sch
Hardware/Dev_Card/: Dev_Card.kicad_pcb  Dev_Card.kicad_pro  Dev_Card.kicad_sch  fp-lib-table  sym-lib-table
Hardware/KIT_Controller/: KIT_Controller.kicad_pcb  KIT_Controller.kicad_pro  KIT_Controller.kicad_sch  ShortRangeModem.kicad_sch  fp-lib-table  mcu.kicad_sch  sym-lib-table
Hardware/LC-Mainboard/: LC-Mainboard.bak.kicad_pro  LC-Mainboard.bak.kicad_sch  LC-Mainboard.kicad_pcb  LC-Mainboard.kicad_pro  LC-Mainboard.kicad_sch  fp-lib-table  sym-lib-table
Hardware/LC-ProtoCard/: LC-ProtoCard.kicad_pcb  LC-ProtoCard.kicad_pro  LC-ProtoCard.kicad_sch
Simulation/Lewis_Crawler/: model.config  model.sdf
Simulation/Meshes/: LCFrame.dae
Software/: .gitignore  Makefile  README.md  kw1fox-3_launch.py
Software/pubsub/: setup.py
(+90 files in other folders)
